tests/ill-typed/missing-main.stella
language core;

fn foo(f : Nat) -> Nat {
  return f(f);
}